Changed asciidoctor setup
Signed-Off-By: Karim Jonas Groeller <groeller@kekx.eu>